testsuite/tests/rename/should_compile/T22513d.hs
module T22513d where

f (Just (x :: id) :: Maybe id) = x