testsuite/tests/rename/should_fail/T21605d.hs
module T21605d where

f (x :: Prelude.id) = x